/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.payment.method;

message PaymentMethod {
    int32 id = 1;
    string name = 2;
    string account_number = 3;
    string account_holder_name = 4;
    string status = 5;
}

message GetAllPaymentMethodsRequest {
    string status = 1;
}

message GetOnePaymentMethodRequest {
    int32 id = 1;
}

message Response {
    PaymentMethod payment_method = 1;
    Error error = 2;
    repeated PaymentMethod payment_methods = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

service PaymentMethodService {
    rpc GetAllPaymentMethods (GetAllPaymentMethodsRequest) returns (Response) {
    }

    rpc GetOnePaymentMethod (GetOnePaymentMethodRequest) returns (Response) {
    }

    rpc CreateOnePaymentMethod (PaymentMethod) returns (Response) {
    }

    rpc UpdateOnePaymentMethod (PaymentMethod) returns (Response) {
    }
}